--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -14,10 +14,83 @@
   <![endif]-->
 </head>
 
-  <body>
-
-    <!-- Copy and paste your HTML from the first UI project here -->
-      
-    
+<body class="container">
+  <header id="navbar">
+    <nav class="navigation">
+      <a href="./services.html">Services</a>
+      <a href="">Product</a>
+      <a href="">Vision</a>
+      <a href="">Features</a>
+      <a href="">About</a>
+      <a href="">Contact</a>
+    </nav>
+    <div id="navlogo">
+      <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+    </div>
+  </header>
+  
+  <section id="action">
+    <div id="innovate">
+      <h1 id="title">Innovation <br>
+        On<br>
+        Demand
+      </h1>
+      <button id="button">Get Started</button>
+    </div>
+    <div id="innovateimg">
+      <img src="img/header-img.png" alt="Image of a code snippet.">
+    </div>
+  </section>
+<hr>  
+  <section class="upper-wrap">
+    <div id="feats">
+      <h3 class="sub1">Features</h3>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+        Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </div>
+  
+    <div id="About">
+      <h3 class="sub2"> About</h3>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+        Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </div>
+  </section>
+  
+  <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+  
+  <section class="lowwrap">
+    <div id="services">
+      <h3 class="sub-1"> Services</h3>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+        Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </div>
+  
+    <div id="product">
+      <h3 class="sub-2"> Product</h3>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+        Suspendisseeu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </div>
+  
+    <div id="vision">
+      <h3 class="sub-3"> Vision</h3>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+        Suspendisseeu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </div>
+  </section>
+  
+  <hr>
+  <section class="contact-us">
+    <h3 class="contact">Contact</h3>
+    <p>Address: 123 Way 456 Street</p>
+    <p>Somewhere, USA</p>
+    <br>
+    <p>Phone: 1 (888) 888-8888</p>
+    <br>
+    <p>Email: sales@greatidea.io</p>
+  </section>
+  
+  <div id="legal">
+    <center>Copyright Great Idea! 2018</center>
+  </div>
   </body>
 </html>
